--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
                 <input type="text" name="cityinp" id="cityinp" placeholder="Enter City Name">
                 <button id="search-btn"><img src="./icons/search.png" alt="Search"></button>
             </div>
+            <div class="weather-content">
+                <div class="city-weather">
+                    <img src="./images/drizzle.png" alt="" id = "weather-icon">
+                    <p id="temp">19°C</p>
+                    <p id="temp-type">Drizzle</p>
+                    <p id="city-name">Hyderabad</p>
+                </div>
+            </div>
+            <div class="wind-humidity-container">
+                <div>
+                    <img src="./images/humidity.png" alt="">
+                    <p id="humid-text">50%</p>
+                    <p class="label">Humidity</p>
+                </div>
+                <div>
+                    <img src="./images/wind.png" alt="">
+                    <p id="wind-text">15 km/hr</p>
+                    <p class="label">Wind Speed</p>
+                </div>
+            </div>
 
         </div>
     </div>
