--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Forecastify</title>
 </head>
 <body>
-    <div class="main">
+    <div class="main" id = "mainCon">
         <div class="center-container">
 
             <div class="inp-container">
